tests/baselines/reference/decoratorMetadataWithImportDeclarationNameCollision2(strict=true).errors.txt
service.ts(2,24): error TS7006: Parameter 'target' implicitly has an 'any' type.


==== db.ts (0 errors) ====
    export class db {
        public doSomething() {
        }
    }
    
==== service.ts (1 errors) ====
    import {db as Database} from './db';
    function someDecorator(target) {
                           ~~~~~~
!!! error TS7006: Parameter 'target' implicitly has an 'any' type.
        return target;
    }
    @someDecorator
    class MyClass {
        db: Database;
    
        constructor(db: Database) { // no collision
            this.db = db;
            this.db.doSomething();
        }
    }
    export {MyClass};
    